# Chapayev

./: CMakeLists.txt  README.md
Headers/: CBoard.h  CCell.h  CChecker.h  CGame.h  CMenu.h  CMenuItem.h  CPlayer.h  CVector.h  CWorld.h  IInterface.h  IObjectState.h  Physics.h
Sources/: CBoard.cpp  CCell.cpp  CChecker.cpp  CGame.cpp  CMenu.cpp  CMenuItem.cpp  CPlayer.cpp  CVector.cpp  CWorld.cpp  Physics.cpp  main.cpp
